make a point selection box

--- a/front_end/view/admin.html
+++ b/front_end/view/admin.html
@@ -105,16 +105,8 @@
         </thead>
         
         <tbody id="table_body_admin_page">
-          <!-- <tr>
-            <td class="center">abc</td>
-            <td class="center">Country</td>
-            <td><input type="text" name="point1"></td>
-          </tr>
-          <tr>
-            <td>111</td>
-            <td><input type="text" name="point2"></td>
-          </tr> -->
-          <tr><td class="center">BAGNAIA Francesco</td><td class="center">ITA</td><td><input type="number" name="point0"></td></tr>
+          
+          <!-- <tr><td class="center">BAGNAIA Francesco</td><td class="center">ITA</td><td><input type="number" name="point0"></td></tr>
           <tr><td class="center">QUARTARARO Fabio</td><td class="center">FRA</td><td><input type="number" name="point1"></td></tr>
           <tr><td class="center">BASTIANINI Enea</td><td class="center">ITA</td><td><input type="number" name="point2"></td></tr>
           <tr><td class="center">ESPARGARO Aleix</td><td class="center">SPA</td><td><input type="number" name="point3"></td></tr>
@@ -124,7 +116,7 @@
           <tr><td class="center">ZARCO Johann</td><td class="center">FRA</td><td><input type="number" name="point7"></td></tr>
           <tr><td class="center">MARTIN Jorge</td><td class="center">SPA</td><td><input type="number" name="point8"></td></tr>
           <tr><td class="center">OLIVEIRA Miguel</td><td class="center">POR</td><td><input type="number" name="point9"></td></tr>
-          <tr><td class="center">VINALES Maverick</td><td class="center">SPA</td><td><input type="number" name="point10"></td></tr>
+          <tr><td class="center">VINALES Maverick</td><td class="center">SPA</td><td><input type="number" name="point10"></td></tr> -->
         </tbody>
         
         <!-- Thêm các hàng khác tương tự -->
